--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -15,14 +15,14 @@
        max-width: 95%;
     } 
 
-    a.event
+    div.event
     {
       width: 31.33332%;
       margin-right: 1%;
       margin-left: 1%;
       float: lefT;
       margin-bottom: 30px;
-      cursor: pointer;
+      //cursor: pointer;
       overflow: visible;
 
       @include breakpoint(md) {
@@ -38,7 +38,24 @@
 
       &:hover 
       {
-        opacity: 0.85;
+        //opacity: 0.85;
+      }
+
+      &.is-passed
+      {
+        //filter:         url(~"data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+        -webkit-filter: grayscale(100%);
+        -moz-filter:    grayscale(100%);
+        -ms-filter:     grayscale(100%);
+        -o-filter:      grayscale(100%);
+        filter: gray; 
+
+        opacity: 0.75;
+
+        &:hover
+        {
+          opacity: 1;
+        }
       }
     }
 }
@@ -202,6 +219,11 @@
     border-top: 1px solid rgba(0,0,0,.1);
     font-family: Roboto;
     overflow: visible !important;
+    padding: 8px 16px;
+
+    @include breakpoint(sm) {
+      padding: 7px 16px;
+    }
     
     .share-menu 
     {
@@ -211,6 +233,18 @@
       padding-top: 12px;
       position: absolute;
       right: 16px;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+
+    .nav-menu 
+    {
+      float: right;
+      //height: 100%;
+      padding-left: 13px;
+      padding-top: 12px;
+      position: absolute;
+      right: 50px;
       top: 50%;
       transform: translateY(-50%);
     }
