RESTE LE PARTAGE ET LA SEARCHBOX

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -603,7 +603,49 @@ footer {
   height: 100%;
   width: 100%;
   background: white;
-  z-index: 100; }
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .overlay .spinner-wrapper {
+    transform: scale(0.5); }
+  .overlay .spinner {
+    position: absolute;
+    animation: rotator 1.4s linear infinite;
+    transform: scale(0.5); }
+  .overlay .path {
+    stroke-dasharray: 187;
+    stroke-dashoffset: 0;
+    transform-origin: center;
+    animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite; }
+
+@keyframes rotator {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(270deg); } }
+
+@keyframes colors {
+  0% {
+    stroke: #930025; }
+  25% {
+    stroke: #930025; }
+  50% {
+    stroke: #930025; }
+  75% {
+    stroke: #930025; }
+  100% {
+    stroke: #930025; } }
+
+@keyframes dash {
+  0% {
+    stroke-dashoffset: 187; }
+  50% {
+    stroke-dashoffset: 46.75;
+    transform: rotate(135deg); }
+  100% {
+    stroke-dashoffset: 187;
+    transform: rotate(450deg); } }
 
 .mixitup-page-list {
   text-align: center;
