--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -36,28 +36,6 @@
         margin-left: 0;
         width: 100%;
       }
-
-      &:hover
-      {
-        //opacity: 0.85;
-      }
-
-      &.is-passed
-      {
-        //filter:         url(~"data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
-        -webkit-filter: grayscale(100%);
-        -moz-filter:    grayscale(100%);
-        -ms-filter:     grayscale(100%);
-        -o-filter:      grayscale(100%);
-        filter: gray;
-
-        opacity: 0.75;
-
-        &:hover
-        {
-          opacity: 1;
-        }
-      }
     }
 }
 
@@ -81,6 +59,14 @@
     background-position: center center !important;
     background-size: cover !important;
     position: relative;
+    opacity: 0.2;
+
+    &:hover{
+      /* TODO a corriger */
+      /*margin-bottom: 10px !important;
+      opacity: 0 !important;
+      cursor: progress;*/
+    }
 
     @include breakpoint(sm) {
       width: 130px;
