--- a/index.html.twig
+++ b/index.html.twig
@@ -48,30 +48,64 @@
 		<script id="event-template" type="text/x-handlebars-template">
 		{% verbatim %}
 			{{#each post}}
-					<div class="event {{genre}} {{sector}}" data-title="{{slug}}">
+					<div class="event {{genre}} {{sector}} {{canton}}" data-title="{{slug}}">
 
 						<div class="card card-wide mdl-card mdl-shadow--2dp" card-url="{{storylink}}">
 							<a href="{{storylink}}" target="_blank">
+
+								<!--
+								mobile
+								<div class="mdl-card__title">
+									<h2 class="mdl-card__title-text">{{{firstname}}} {{{name}}}</h2>
+								</div>
+							-->
+
 								<div class="card-header mdl-card__title" style="background: url('{{image}}')">
+
 									<div class="card-overlay">
 										<h1 class="card-title mdl-card__title-text">{{{firstname}}} {{{name}}}</h1>
 									</div>
-
 								</div>
 							</a>
 							<div class="card-desc mdl-card__supporting-text">
-								<span class="card-meta">{{company}}</span>
-								{{#if sector}}
-								  #{{sector}}
-								{{/if}}
+								<span class="card-meta">
+
+									<span class="card-meta-info">
+										{{function}}{{#if company}}, {{company}}{{/if}}
+									</span>
+
+
+									<span class="card-meta--tag">
+									{{#if sector}}
+									  #{{sector}}
+									{{/if}}
+
+									{{#if canton}}
+									   #{{canton}}
+									{{/if}}
+									</span>
+
+
+								</span>
+								<span class="card-meta">
+									<span class="card-meta-info">
+										{{age}} ans [calculé d’après date naissance]
+									</span>
+								</span>
 
 								{{#if linkedin}}
-								<p>
+								<p style="float: left;">
 									<i class="fa fa-linkedin-square" style="color: #0073b1"></i>
 								  <a href="{{linkedin}}" target="_blank">Son profil LinkedIn</a>
 								</p>
 								{{/if}}
 
+								{{#if twitter}}
+								<p style="float: left;">
+									<i class="fa fa-twitter-square" style="color: #1DA1F2"></i>
+								  <a href="{{twitter}}" target="_blank">Son fil Twitter</a>
+								</p>
+								{{/if}}
 
 							</div>
 
@@ -79,19 +113,21 @@
 							<div class="card-footer mdl-card__supporting-text">
 								&nbsp;
 
+								<!--
 								<a href="" target="_blank" id="card-nav-menu-{{id}}" class="nav-menu mdl-button mdl-js-button mdl-button--icon">
 									<i class="material-icons">location_on</i>
 								</a>
-
-								<button id="card-share-menu-{{id}}" class="share-menu mdl-button mdl-js-button mdl-button--icon">
-									<i class="material-icons">share</i>
-								</button>
-								<ul class="grid--event--share mdl-menu mdl-menu--top-right mdl-js-menu mdl-js-ripple-effect share-menu--content"
-								data-mdl-for="card-share-menu-{{id}}">
-								<a href="https://www.facebook.com/sharer.php?u={{storylink}}&display=popup&ref=plugin&src=share_button" target="_blank"><li class="mdl-menu__item">Facebook</li></a>
-								<a href="https://twitter.com/intent/tweet?text=Forum des 100 – {{title}} – {{storylink}}&via=letemps" target="_blank"><li class="mdl-menu__item">Twitter</li></a>
-								<a target="blank" href="https://www.linkedin.com/shareArticle?url={{storylink}}&mini=true&title={{title}}&summary={{null}}&source={{'Le Temps'}}"><li class="mdl-menu__item">Linkedin</li></a>
+							-->
+							<button id="card-share-menu-{{id}}" class="share-menu mdl-button mdl-js-button mdl-button--icon">
+								<i class="material-icons">share</i>
+							</button>
+							<ul class="grid--event--share mdl-menu mdl-menu--top-right mdl-js-menu mdl-js-ripple-effect share-menu--content"
+							data-mdl-for="card-share-menu-{{id}}">
+							<a href="https://www.facebook.com/sharer.php?u={{storylink}}&display=popup&ref=plugin&src=share_button" target="_blank"><li class="mdl-menu__item">Facebook</li></a>
+							<a href="https://twitter.com/intent/tweet?text=Forum des 100 – {{title}} – {{storylink}}&via=letemps" target="_blank"><li class="mdl-menu__item">Twitter</li></a>
+							<a target="blank" href="https://www.linkedin.com/shareArticle?url={{storylink}}&mini=true&title={{title}}&summary={{null}}&source={{'Le Temps'}}"><li class="mdl-menu__item">Linkedin</li></a>
 							</ul>
+
 
 							</div>
 						</div>
@@ -121,7 +157,6 @@
 
 		<main>
 			<div class="hello-form">
-				<h2 class="hello-form--punchline">Trouvez votre prochain rendez-vous</h2>
 				<form class="hello-form--filters-wrapper">
 					<button hidden class="reset "type="reset">reset</button>
 
@@ -146,6 +181,7 @@
 						            <li class="mdl-menu__item mdl-menu__item--full-bleed-divider" data-filter=".event">Tous</li>
 						            <li class="mdl-menu__item" data-filter=".Art">Art</li>
 												<li class="mdl-menu__item" data-filter=".Artisanat">Artisanat</li>
+												<li class="mdl-menu__item" data-filter=".Informatique">Informatique</li>
 												<li class="mdl-menu__item" data-filter=".Recherche">Recherche</li>
 						        </ul>
 						    </div>
@@ -172,14 +208,21 @@
 					<div class="hello-form--filters-wrapper--box margin-negative-top">
 						<fieldset data-filter-group="year" data-logic="and">
 							<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
-						        <input type="text" value="" class="mdl-textfield__input" id="filter-subtype" readonly>
-						        <input type="hidden" value="" name="filter-subtype">
+						        <input type="text" value="" class="mdl-textfield__input" id="filter-canton" readonly>
+						        <input type="hidden" value="" name="filter-canton">
 						        <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-						        <label for="filter-subtype" class="mdl-textfield__label">Canton</label>
-						        <ul for="filter-subtype" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
+						        <label for="filter-canton" class="mdl-textfield__label">Canton</label>
+						        <ul for="filter-canton" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
 						            <li hidden class="mdl-menu__item" data-filter=""></li>
 						            <li class="mdl-menu__item mdl-menu__item--full-bleed-divider" data-filter=".event">Tous</li>
-						            <li class="mdl-menu__item" class="y2018" data-filter=".y2018">Remplir cellules</li>
+												<li class="mdl-menu__item BE" data-filter=".BE">Berne</li>
+												<li class="mdl-menu__item FR" data-filter=".FR">Fribourg</li>
+												<li class="mdl-menu__item GE" data-filter=".GE">Genève</li>
+												<li class="mdl-menu__item JU" data-filter=".JU">Jura</li>
+												<li class="mdl-menu__item NE" data-filter=".NE">Neuchâtel</li>
+												<li class="mdl-menu__item SO" data-filter=".SO">Soleure</li>
+												<li class="mdl-menu__item VD" data-filter=".VD">Vaud</li>
+												<li class="mdl-menu__item VS" data-filter=".VS">Valais</li>
 						        </ul>
 						    </div>
 						</fieldset>
