--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -236,7 +236,6 @@ header {
           transform: translateX(5px); } }
 
 .header-figures {
-  background: url("../../img/article/berthollet.jpg");
   background-position: center center;
   background-size: cover;
   width: 100%;
@@ -250,14 +249,15 @@ header {
   max-width: 1000px;
   background: white;
   margin: auto;
-  padding: 40px 30px 0 30px;
-  height: 260px;
-  margin-bottom: 50px; }
+  margin-top: 20px;
+  height: 80px;
+  padding: 20px 30px 0 30px;
+  margin-bottom: 20px; }
   @media (max-width: 576px) {
     .hello-form {
       padding-top: 20px;
       margin-bottom: 15px;
-      height: 225px; } }
+      height: 80px; } }
   .hello-form .hello-form--punchline {
     font-size: 2.5em;
     text-align: center;
@@ -276,6 +276,10 @@ header {
     .hello-form .hello-form--filters-wrapper .hello-form--filters-wrapper--box {
       width: 50%;
       float: left; }
+      .hello-form .hello-form--filters-wrapper .hello-form--filters-wrapper--box.fullwidth {
+        width: 100%; }
+      .hello-form .hello-form--filters-wrapper .hello-form--filters-wrapper--box.hidden {
+        display: none; }
       @media (max-width: 576px) {
         .hello-form .hello-form--filters-wrapper .hello-form--filters-wrapper--box.margin-negative-top {
           margin-top: -15px; } }
@@ -287,8 +291,10 @@ header {
         width: 100%; }
 
 .grid {
-  max-width: 95%;
   width: calc(1000px + 1.333%);
+  max-width: 95%;
+  /* width: calc(1000px + 1.333%); */
+  margin-top: 1em;
   margin: auto;
   float: none;
   padding: 0;
@@ -305,25 +311,16 @@ header {
     margin-left: 1%;
     float: lefT;
     margin-bottom: 30px;
-    overflow: visible; }
-    @media (max-width: 768px) {
-      .grid div.event {
-        margin-bottom: 15px;
-        width: 48%; } }
+    overflow: visible;
+    /*@include breakpoint(md) {
+         margin-bottom: 15px;
+         width: 48%;
+      }*/ }
     @media (max-width: 576px) {
       .grid div.event {
         margin-right: 0;
         margin-left: 0;
         width: 100%; } }
-    .grid div.event.is-passed {
-      -webkit-filter: grayscale(100%);
-      -moz-filter: grayscale(100%);
-      -ms-filter: grayscale(100%);
-      -o-filter: grayscale(100%);
-      filter: gray;
-      opacity: 0.75; }
-      .grid div.event.is-passed:hover {
-        opacity: 1; }
 
 .card {
   width: auto !important;
@@ -341,10 +338,15 @@ header {
     background-position: center center !important;
     background-size: cover !important;
     position: relative; }
+    .card .card-header:hover {
+      /* TODO a corriger */
+      opacity: 0.8;
+      cursor: pointer;
+      transition: .5s; }
     @media (max-width: 576px) {
       .card .card-header {
         width: 130px;
-        height: 130px;
+        height: 100px;
         float: left; } }
   .card .card-menu {
     color: white; }
@@ -396,10 +398,17 @@ header {
     color: rgba(0, 0, 0, 0.54);
     text-transform: uppercase;
     font-size: 11px;
-    margin-bottom: 10px;
+    margin-bottom: 6px;
     font-family: Roboto; }
     .card .card-meta .card-meta--tag {
-      float: right !important; }
+      float: right; }
+  .card .card-social {
+    float: left;
+    margin-right: 8px; }
+    @media (max-width: 576px) {
+      .card .card-social {
+        margin: 0;
+        margin-right: -6px; } }
   .card .card-title {
     color: white !important;
     font-size: 20px !important;
@@ -408,19 +417,21 @@ header {
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
     font-weight: 500 !important; }
-    .card .card-title.card-title-mobile {
-      color: black !important;
-      margin: 0;
-      display: none; }
-      @media (max-width: 576px) {
-        .card .card-title.card-title-mobile {
-          display: block; } }
+  .card .mdl-card__title.card-title-mobile {
+    color: black !important;
+    margin: 0;
+    display: none;
+    padding: 4px 10px; }
+    @media (max-width: 576px) {
+      .card .mdl-card__title.card-title-mobile {
+        display: block; } }
   .card .card-desc {
     color: #4e4e4e !important;
     width: 100% !important; }
     @media (max-width: 576px) {
       .card .card-desc {
-        width: calc(100% - 130px) !important; } }
+        width: calc(100% - 130px) !important;
+        padding-top: 0; } }
     @media (max-width: 576px) {
       .card .card-desc .desc-txt {
         display: none; } }
