--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -1,7 +1,9 @@
 .grid
 {
-    max-width: 95%;
     width: calc(1000px + 1.333%);
+    max-width: 95%;
+    /* width: calc(1000px + 1.333%); */
+    margin-top: 1em;
     margin: auto;
     float: none;
     padding: 0;
@@ -26,10 +28,10 @@
       overflow: visible;
       //display: block !important;
 
-      @include breakpoint(md) {
+      /*@include breakpoint(md) {
          margin-bottom: 15px;
          width: 48%;
-      }
+      }*/
 
       @include breakpoint(sm) {
         margin-right: 0;
@@ -42,7 +44,7 @@
 .card
 {
   width: auto !important;
-  height: 300px;
+  height: 310px;
   position: relative;
   overflow: visible !important;
 
@@ -59,18 +61,17 @@
     background-position: center center !important;
     background-size: cover !important;
     position: relative;
-    opacity: 0.2;
 
     &:hover{
       /* TODO a corriger */
-      /*margin-bottom: 10px !important;
-      opacity: 0 !important;
-      cursor: progress;*/
+      opacity: 0.8;
+      cursor: pointer;
+      transition: .5s;
     }
 
     @include breakpoint(sm) {
       width: 130px;
-      height: 130px;
+      height: 100px;
       float: left;
     }
   }
@@ -137,14 +138,24 @@
         color: rgba(0, 0, 0, .54);
         text-transform: uppercase;
         font-size: 11px;
-        margin-bottom: 10px;
+        margin-bottom: 6px;
         //font-weight: 900;
         font-family: Roboto;
 
         .card-meta--tag
         {
-          float: right!important;
+          float: right;
         }
+    }
+
+    .card-social
+    {
+      float: left;
+      margin-right: 8px;
+      @include breakpoint(sm) {
+        margin: 0;
+        margin-right: -6px;
+      }
     }
 
   .card-title
@@ -157,18 +168,19 @@
     text-rendering: optimizeLegibility;
     font-weight: 500 !important;
 
-    &.card-title-mobile
-    {
+
+
+  }
+  .mdl-card__title.card-title-mobile{
       color: black !important;
       margin: 0;
       display: none;
+      padding: 4px 10px;
 
       @include breakpoint(sm) {
         display: block;
       }
     }
-
-  }
 
   .card-desc
   {
@@ -177,6 +189,7 @@
 
     @include breakpoint(sm) {
       width: calc(100% - 130px) !important;
+      padding-top: 0;
     }
 
     .desc-txt
