--- a/assets/scss/hello-form.scss
+++ b/assets/scss/hello-form.scss
@@ -4,15 +4,15 @@
     max-width: 1000px;
     background: white;
     margin: auto;
-    margin-top: 100px;
-    padding: 40px 30px 0 30px;
-    height: 260px;
-    margin-bottom: 50px;
+    margin-top: 20px;
+    height: 80px;
+    padding: 20px 30px 0 30px;
+    margin-bottom: 20px;
 
     @include breakpoint(sm) {
          padding-top: 20px;
          margin-bottom: 15px;
-         height: 225px;
+         height: 80px;
     }
 
     .hello-form--punchline
@@ -40,6 +40,16 @@
         {
             width: 50%;
             float: left;
+
+            &.fullwidth
+            {
+              width: 100%;
+            }
+
+            &.hidden
+            {
+              display: none;
+            }
 
             &.margin-negative-top
             {
