--- a/index.html.twig
+++ b/index.html.twig
@@ -53,17 +53,14 @@
 						<div class="card card-wide mdl-card mdl-shadow--2dp" card-url="{{storylink}}">
 							<a href="{{storylink}}" target="_blank">
 
-								<!--
-								mobile
-								<div class="mdl-card__title">
-									<h2 class="mdl-card__title-text">{{{firstname}}} {{{name}}}</h2>
+								<div class="mdl-card__title card-title-mobile">
+									<h4 class="mdl-card__title-text">{{{title}}}</h4>
 								</div>
-							-->
 
-								<div class="card-header mdl-card__title" style="background: url('{{image}}')">
+								<div class="card-header mdl-card__title b-lazy {{{nopicture}}}" data-src="{{image}}">
 
 									<div class="card-overlay">
-										<h1 class="card-title mdl-card__title-text">{{{firstname}}} {{{name}}}</h1>
+										<h1 class="card-title mdl-card__title-text">{{{title}}}</h1>
 									</div>
 								</div>
 							</a>
@@ -89,19 +86,19 @@
 								</span>
 								<span class="card-meta">
 									<span class="card-meta-info">
-										{{age}} ans [calculé d’après date naissance]
+										{{age}}{{desc}}
 									</span>
 								</span>
 
 								{{#if linkedin}}
-								<p style="float: left;">
+								<p class="card-social">
 									<i class="fa fa-linkedin-square" style="color: #0073b1"></i>
 								  <a href="{{linkedin}}" target="_blank">Son profil LinkedIn</a>
 								</p>
 								{{/if}}
 
 								{{#if twitter}}
-								<p style="float: left;">
+								<p class="card-social">
 									<i class="fa fa-twitter-square" style="color: #1DA1F2"></i>
 								  <a href="{{twitter}}" target="_blank">Son fil Twitter</a>
 								</p>
@@ -158,37 +155,36 @@
 		<main>
 			<div class="hello-form">
 				<form class="hello-form--filters-wrapper">
+
 					<button hidden class="reset "type="reset">reset</button>
 
-					<div class="hello-form--filters-wrapper--box ">
+					<div class="hello-form--filters-wrapper--box fullwidth">
 							<fieldset data-filter-group="searchbox" data-logic="and">
 						    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 						    <input class="mdl-textfield__input" type="text" id="sample3" data-search-attribute="data-title">
-						    <label class="mdl-textfield__label" for="sample3"><i class="material-icons">search</i><span style="position: absolute; top: 2px;">Rechercher un nom</span></label>
+						    <label class="mdl-textfield__label" for="sample3"><i class="material-icons">search</i><span style="position: absolute; top: 2px;">Rechercher</span></label>
 						    </div>
 						  </fieldset>
 					</div>
 
-					<div class="hello-form--filters-wrapper--box ">
+
+					<div class="hello-form--filters-wrapper--box hidden">
 						<fieldset data-filter-group="category" data-logic="and">
 							<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
 						        <input type="text" value="" class="mdl-textfield__input" id="filter-place" readonly>
 						        <input type="hidden" value="" name="filter-place">
 						        <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-						        <label for="filter-place" class="mdl-textfield__label">Secteur</label>
+						        <label for="filter-place" class="mdl-textfield__label">Élus 2019</label>
 						        <ul for="filter-place" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
 						        	<li hidden class="mdl-menu__item" data-filter=""></li>
-						            <li class="mdl-menu__item mdl-menu__item--full-bleed-divider" data-filter=".event">Tous</li>
-						            <li class="mdl-menu__item" data-filter=".Art">Art</li>
-												<li class="mdl-menu__item" data-filter=".Artisanat">Artisanat</li>
-												<li class="mdl-menu__item" data-filter=".Informatique">Informatique</li>
-												<li class="mdl-menu__item" data-filter=".Recherche">Recherche</li>
+						            <li id="load2019" class="mdl-menu__item mdl-menu__item--full-bleed-divider" data-filter=".event">Élus 2019</li>
+						            <li id="loadArchive" class="mdl-menu__item" data-filter=".Art">Archives 2005-2018</li>
 						        </ul>
 						    </div>
 					    </fieldset>
 					</div>
 
-					<div class="hello-form--filters-wrapper--box margin-negative-top">
+					<div class="hello-form--filters-wrapper--box margin-negative-top hidden">
 						<fieldset data-filter-group="subscription" data-logic="and">
 							<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
 						        <input type="text" value="" class="mdl-textfield__input" id="filter-category" readonly>
@@ -205,7 +201,7 @@
 						</fieldset>
 					</div>
 
-					<div class="hello-form--filters-wrapper--box margin-negative-top">
+					<div class="hello-form--filters-wrapper--box margin-negative-top hidden">
 						<fieldset data-filter-group="year" data-logic="and">
 							<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
 						        <input type="text" value="" class="mdl-textfield__input" id="filter-canton" readonly>
@@ -246,6 +242,7 @@
 		</main>
 
 
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/pym/1.3.2/pym.v1.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="{{ app.base_path }}/assets/js/getmdl-select.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
@@ -257,6 +254,7 @@
 		<script src="{{ app.base_path }}/assets/js/mixitup.min.js"></script>
 		<script src="{{ app.base_path }}/assets/js/mixitup-pagination.min.js"></script>
 		<script src="{{ app.base_path }}/assets/js/mixitup-multifilter.js"></script>
+		<script src="{{ app.base_path }}/assets/js/blazy.min.js"></script>
 		<script src="{{ app.base_path }}/assets/js/main.js?v=1.4"></script>
 	</body>
 
