--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -1,8 +1,8 @@
 .grid
 {
-    width: calc(1000px + 1.333%);
-    max-width: 95%;
-    /* width: calc(1000px + 1.333%); */
+    width: 100%;
+    // width: calc(1000px + 1.333%);
+    // max-width: 95%;
     margin-top: 1em;
     margin: auto;
     float: none;
