--- a/assets/scss/hello-form.scss
+++ b/assets/scss/hello-form.scss
@@ -1,10 +1,11 @@
 .hello-form
 {
-    width: 95%;
-    max-width: 1000px;
+    width: 100%;
+    // width: 95%;
+    // max-width: 1000px;
     background: white;
     margin: auto;
-    margin-top: 20px;
+    // margin-top: 20px;
     height: 80px;
     padding: 20px 30px 0 30px;
     margin-bottom: 20px;
