--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -60,7 +60,7 @@ $gray-light-gray-text: #7f8081;
 //=====================================================================//
 html, body
 {
- 
+  height: auto !important;
 }
 
 html 
