--- a/index.html.twig
+++ b/index.html.twig
@@ -158,7 +158,7 @@
 
 					<button hidden class="reset "type="reset">reset</button>
 
-					<div class="hello-form--filters-wrapper--box fullwidth">
+					<div class="hello-form--filters-wrapper--box searchfield">
 							<fieldset data-filter-group="searchbox" data-logic="and">
 						    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 						    <input class="mdl-textfield__input" type="text" id="sample3" data-search-attribute="data-title">
@@ -168,7 +168,7 @@
 					</div>
 
 
-					<div class="hello-form--filters-wrapper--box hidden">
+					<div class="hello-form--filters-wrapper--box">
 						<fieldset data-filter-group="category" data-logic="and">
 							<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
 						        <input type="text" value="" class="mdl-textfield__input" id="filter-place" readonly>
@@ -184,7 +184,7 @@
 					    </fieldset>
 					</div>
 
-					<div class="hello-form--filters-wrapper--box margin-negative-top hidden">
+					<div class="hello-form--filters-wrapper--box margin-negative-top">
 						<fieldset data-filter-group="subscription" data-logic="and">
 							<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
 						        <input type="text" value="" class="mdl-textfield__input" id="filter-category" readonly>
@@ -201,7 +201,7 @@
 						</fieldset>
 					</div>
 
-					<div class="hello-form--filters-wrapper--box margin-negative-top hidden">
+					<div class="hello-form--filters-wrapper--box margin-negative-top">
 						<fieldset data-filter-group="year" data-logic="and">
 							<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
 						        <input type="text" value="" class="mdl-textfield__input" id="filter-canton" readonly>
