--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,6 +39,9 @@
   font-family: "tungsten";
   src: url("../fonts/tungsten-medium.eot?#iefix") format("embedded-opentype"), url("../fonts/tungsten-medium.woff") format("woff"), url("../fonts/tungsten-medium.ttf") format("truetype"), url("../fonts/tungsten-medium.svg#tungsten") format("svg"); }
 
+html, body {
+  height: auto !important; }
+
 html {
   font-size: 16px; }
 
@@ -245,10 +248,11 @@ header {
       height: 250px; } }
 
 .hello-form {
-  width: 100%;
+  max-width: 800px;
+  width: 98%;
   background: white;
   margin: auto;
-  height: 80px;
+  height: 156px;
   padding: 20px 30px 0 30px;
   margin-bottom: 20px; }
   @media (max-width: 576px) {
@@ -272,8 +276,11 @@ header {
   .hello-form .hello-form--filters-wrapper {
     width: 100%; }
     .hello-form .hello-form--filters-wrapper .hello-form--filters-wrapper--box {
-      width: 50%;
-      float: left; }
+      width: 33.33332%;
+      float: left;
+      padding: 0 15px; }
+      .hello-form .hello-form--filters-wrapper .hello-form--filters-wrapper--box.searchfield {
+        width: 100%; }
       .hello-form .hello-form--filters-wrapper .hello-form--filters-wrapper--box.fullwidth {
         width: 100%; }
       .hello-form .hello-form--filters-wrapper .hello-form--filters-wrapper--box.hidden {
@@ -281,10 +288,6 @@ header {
       @media (max-width: 576px) {
         .hello-form .hello-form--filters-wrapper .hello-form--filters-wrapper--box.margin-negative-top {
           margin-top: -15px; } }
-      .hello-form .hello-form--filters-wrapper .hello-form--filters-wrapper--box:nth-child(2n+1) {
-        padding-left: 0px; }
-      .hello-form .hello-form--filters-wrapper .hello-form--filters-wrapper--box:nth-child(2n+2) {
-        padding-right: 30px; }
       .hello-form .hello-form--filters-wrapper .hello-form--filters-wrapper--box .mdl-textfield {
         width: 100%; }
 
