--- a/assets/scss/hello-form.scss
+++ b/assets/scss/hello-form.scss
@@ -1,12 +1,13 @@
 .hello-form
 {
-    width: 100%;
-    // width: 95%;
+    max-width: 800px;
+    width: 98%;
     // max-width: 1000px;
     background: white;
     margin: auto;
     // margin-top: 20px;
-    height: 80px;
+    height: 156px;
+    // overflow: auto;
     padding: 20px 30px 0 30px;
     margin-bottom: 20px;
 
@@ -39,8 +40,15 @@
 
         .hello-form--filters-wrapper--box
         {
-            width: 50%;
+            &.searchfield
+            {
+                width: 100%;
+                //padding: 0 !important;
+            }
+
+            width: 33.33332%;
             float: left;
+            padding: 0 15px;
 
             &.fullwidth
             {
@@ -60,16 +68,16 @@
 
             }
 
-            &:nth-child(2n+1)
-            {
-                padding-left: 0px;
-                //background:red
-            }
+            // &:nth-child(2n+1)
+            // {
+            //     padding-left: 0px;
+            //     background:red
+            // }
 
-            &:nth-child(2n+2)
-            {
-                padding-right: 30px;
-            }
+            // &:nth-child(2n+2)
+            // {
+            //     padding-right: 30px;
+            // }
 
             .mdl-textfield
             {
