--- a/assets/scss/hello-form.scss
+++ b/assets/scss/hello-form.scss
@@ -24,7 +24,7 @@
         font-weight: 300;
         color: #4e4e4e;
         margin: 0 0 20px 0;
-        font-family: 'ratio_light' !important;
+        // font-family: 'ratio_light' !important;
 
         @include breakpoint(sm) {
             font-size: 2em;
