--- a/index.html.twig
+++ b/index.html.twig
@@ -60,7 +60,9 @@
 								<div class="card-header mdl-card__title b-lazy {{{nopicture}}}" data-src="{{image}}">
 
 									<div class="card-overlay">
-										<h1 class="card-title mdl-card__title-text">{{{title}}}</h1>
+										<h1 class="card-title mdl-card__title-text">{{{title}}} {{#if canton}}({{canton}}){{/if}}</h1>
+										
+										<!--<img src="img/cantons/ju.svg">-->
 									</div>
 								</div>
 							</a>
@@ -72,61 +74,58 @@
 									</span>
 
 
-									<span class="card-meta--tag">
-									{{#if sector}}
-									  #{{sector}}
-									{{/if}}
-
-									{{#if canton}}
-									   #{{canton}}
-									{{/if}}
-									</span>
+									<!--<span class="card-meta--tag">
+										{{#if sector}}
+										  #{{sector}}
+										{{/if}}									
+									</span>-->
 
 
 								</span>
+
 								<span class="card-meta">
 									<span class="card-meta-info">
 										{{age}}{{desc}}
 									</span>
 								</span>
 
-								{{#if linkedin}}
-								<p class="card-social">
-									<i class="fa fa-linkedin-square" style="color: #0073b1"></i>
-								  <a href="{{linkedin}}" target="_blank">Son profil LinkedIn</a>
-								</p>
-								{{/if}}
-
-								{{#if twitter}}
-								<p class="card-social">
-									<i class="fa fa-twitter-square" style="color: #1DA1F2"></i>
-								  <a href="{{twitter}}" target="_blank">Son fil Twitter</a>
-								</p>
-								{{/if}}
-
+								
 							</div>
 
 
-							<div class="card-footer mdl-card__supporting-text">
-								&nbsp;
+						
 
-								<!--
-								<a href="" target="_blank" id="card-nav-menu-{{id}}" class="nav-menu mdl-button mdl-js-button mdl-button--icon">
-									<i class="material-icons">location_on</i>
-								</a>
-							-->
-							<button id="card-share-menu-{{id}}" class="share-menu mdl-button mdl-js-button mdl-button--icon">
-								<i class="material-icons">share</i>
-							</button>
-							<ul class="grid--event--share mdl-menu mdl-menu--top-right mdl-js-menu mdl-js-ripple-effect share-menu--content"
-							data-mdl-for="card-share-menu-{{id}}">
-							<a href="https://www.facebook.com/sharer.php?u={{storylink}}&display=popup&ref=plugin&src=share_button" target="_blank"><li class="mdl-menu__item">Facebook</li></a>
-							<a href="https://twitter.com/intent/tweet?text=Forum des 100 – {{title}} – {{storylink}}&via=letemps" target="_blank"><li class="mdl-menu__item">Twitter</li></a>
-							<a target="blank" href="https://www.linkedin.com/shareArticle?url={{storylink}}&mini=true&title={{title}}&summary={{null}}&source={{'Le Temps'}}"><li class="mdl-menu__item">Linkedin</li></a>
+							<div class="mdl-card__actions mdl-card--border">
+
+							    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect lt-button">
+							      Portrait
+							    </a>
+								{{#if linkedin}}
+								    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect li-button" href="{{linkedin}}" target="_blank">
+								      <i class="fa fa-linkedin-square"></i> Profil
+								    </a>
+							    {{/if}}
+								{{#if twitter}}
+								    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect tw-button" href="{{twitter}}" target="_blank">
+								      <i class="fa fa-twitter-square"></i> Profil
+								    </a>
+							    {{/if}}
+
+							</div>
+
+							<!-- NEW -->
+							<div class="mdl-card__menu">
+							    <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect" id="card-share-menu-{{id}}">
+							      <i class="material-icons">share</i>
+							    </button>
+							</div>
+							<ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect" for="card-share-menu-{{id}}">>
+							  <li class="mdl-menu__item">Some Action</li>
+							  <li class="mdl-menu__item mdl-menu__item--full-bleed-divider">Another Action</li>
+							  <li disabled class="mdl-menu__item">Disabled Action</li>
+							  <li class="mdl-menu__item">Yet Another Action</li>
 							</ul>
 
-
-							</div>
 						</div>
 				</div>
 
@@ -136,14 +135,11 @@
 	</head>
 
 	<body style="padding-top: {{ navBarOffset }};">
-		<div class="overlay">
-			{# <span class="spinner-wrapper"> #}
+		<!-- <div class="overlay">
 			<svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
    				<circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
 			</svg>
-			{# </span> #}
-			{# <p>Chargement des événements</p> #}
-		</div>
+		</div> -->
 
 		<!-- Google Tag Manager (noscript) -->
 		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TQ2B8Q"
