--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -253,6 +253,11 @@
   }
 }
 
+// .mdl-card__menu
+// { 
+//   position: static !important;
+// }
+
 .mdl-card__menu .mdl-button
 {
   // background: rgba(0, 0, 0, .3);
