--- a/assets/scss/hello-form.scss
+++ b/assets/scss/hello-form.scss
@@ -6,7 +6,8 @@
     background: white;
     margin: auto;
     // margin-top: 20px;
-    height: 156px;
+    //height: 156px;
+    height: 100px;
     // overflow: auto;
     padding: 20px 30px 0 30px;
     margin-bottom: 20px;
