--- a/index.html.twig
+++ b/index.html.twig
@@ -53,9 +53,7 @@
 						<div class="card card-wide mdl-card mdl-shadow--2dp" card-url="{{storylink}}">
 							<a href="{{storylink}}" target="_blank">
 
-								<div class="mdl-card__title card-title-mobile">
-									<h4 class="mdl-card__title-text">{{{title}}}</h4>
-								</div>
+								
 
 								<div class="card-header mdl-card__title b-lazy {{{nopicture}}}" data-src="{{image}}">
 
@@ -67,6 +65,9 @@
 								</div>
 							</a>
 							<div class="card-desc mdl-card__supporting-text">
+								<div class="mdl-card__title card-title-mobile">
+									<h4 class="mdl-card__title-text">{{{title}}}</h4>
+								</div>
 								<span class="card-meta">
 
 									<span class="card-meta-info">
@@ -114,7 +115,7 @@
 							</div>
 
 							<!-- NEW -->
-							<div class="mdl-card__menu">
+							<div class="mdl-card__menu share-menu">
 							    <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect" id="card-share-menu-{{id}}">
 							      <i class="material-icons">share</i>
 							    </button>
@@ -163,7 +164,7 @@
 					</div>
 
 
-					<div class="hello-form--filters-wrapper--box">
+					<!--<div class="hello-form--filters-wrapper--box">
 						<fieldset data-filter-group="category" data-logic="and">
 							<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
 						        <input type="text" value="" class="mdl-textfield__input" id="filter-place" readonly>
@@ -217,7 +218,7 @@
 						        </ul>
 						    </div>
 						</fieldset>
-					</div>
+					</div>-->
 				</form>
 			</div>
 
