--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -291,15 +291,15 @@
 
   .lt-button
   {
-    background: #930025;
+    background: #e36943;
 
     &:hover
     {
-      background: lighten(#930025, 10%);
+      background: lighten(#e36943, 10%);
     }
     &:focus
     {
-      background: lighten(#930025, 10%);
+      background: lighten(#e36943, 10%);
     }
   }
 
