--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -2,7 +2,7 @@
 //=====================================================================//
 // COLORS
 //=====================================================================//
-$letemps-color-1: #930025;  
+$letemps-color-1: #e36943;  
 $letemps-color-2: #b80021;
 $gray-light: #f2f2f2;
 $gray-light-gray-text: #7f8081;  
