--- a/index.html.twig
+++ b/index.html.twig
@@ -103,12 +103,12 @@
 							    </a>
 								{{#if linkedin}}
 								    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect li-button" href="{{linkedin}}" target="_blank">
-								      <i class="fa fa-linkedin-square"></i> Profil
+								      <i class="fa fa-linkedin"></i>
 								    </a>
 							    {{/if}}
 								{{#if twitter}}
 								    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect tw-button" href="{{twitter}}" target="_blank">
-								      <i class="fa fa-twitter-square"></i> Profil
+								      <i class="fa fa-twitter"></i>
 								    </a>
 							    {{/if}}
 
