--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -450,7 +450,7 @@ header {
   color: white; }
 
 .mdl-card__actions .mdl-button {
-  color: white !important;
+  color: white;
   font-weight: 400; }
   @media (max-width: 992px) {
     .mdl-card__actions .mdl-button {
@@ -460,19 +460,21 @@ header {
       padding: 0 16px; } }
 
 .mdl-card__actions .lt-button {
-  background: #e36943; }
-  .mdl-card__actions .lt-button:hover {
-    background: #ea8c6f; }
-  .mdl-card__actions .lt-button:focus {
-    background: #ea8c6f; }
+  color: #e36943 !important; }
 
 .mdl-card__actions .li-button {
   color: #0077b5 !important;
-  border: 1px solid #0077b5; }
+  padding: 0 10px;
+  font-size: 18px;
+  min-width: 10px;
+  transform: translateY(-1px); }
 
 .mdl-card__actions .tw-button {
   color: #00a7f8 !important;
-  border: 1px solid #00a7f8; }
+  padding: 0 10px;
+  font-size: 18px;
+  min-width: 10px;
+  transform: translate(-10px, 0); }
 
 @media (max-width: 576px) {
   .share-menu {
