fix twitter share text

--- a/index.html.twig
+++ b/index.html.twig
@@ -53,13 +53,13 @@
 						<div class="card card-wide mdl-card mdl-shadow--2dp" card-url="{{storylink}}">
 							<a href="{{storylink}}" target="_blank">
 
-								
+
 
 								<div class="card-header mdl-card__title b-lazy {{{nopicture}}}" data-src="{{image}}">
 
 									<div class="card-overlay">
 										<h1 class="card-title mdl-card__title-text">{{{title}}} {{#if canton}}({{canton}}){{/if}}</h1>
-										
+
 										<!--<img src="img/cantons/ju.svg">-->
 									</div>
 								</div>
@@ -78,7 +78,7 @@
 									<!--<span class="card-meta--tag">
 										{{#if sector}}
 										  #{{sector}}
-										{{/if}}									
+										{{/if}}
 									</span>-->
 
 
@@ -90,11 +90,11 @@
 									</span>
 								</span>
 
-								
+
 							</div>
 
 
-						
+
 
 							<div class="mdl-card__actions mdl-card--border">
 
@@ -121,11 +121,11 @@
 							    </button>
 							    <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" data-mdl-for="card-share-menu-{{id}}">
 								 	<a href="https://www.facebook.com/sharer.php?u={{storylink}}&display=popup&ref=plugin&src=share_button" target="_blank"><li class="mdl-menu__item">Facebook</li></a>
-									<a href="https://twitter.com/intent/tweet?text=Les événement du Temps – {{title}} - {{storylink}}&via=letemps" target="_blank"><li class="mdl-menu__item">Twitter</li></a>
+									<a href="https://twitter.com/intent/tweet?text=Les élus du Forum des 100 – {{title}} – {{storylink}}&via=letemps" target="_blank"><li class="mdl-menu__item">Twitter</li></a>
 									<a target="blank" href="https://www.linkedin.com/shareArticle?url={{storylink}}&mini=true&title={{title}}&summary={{custom_fields.event_desc}}&source={{'Le Temps'}}"><li class="mdl-menu__item">Linkedin</li></a>
 								</ul>
 							</div>
-							
+
 						</div>
 				</div>
 
@@ -133,7 +133,7 @@
 		{% endverbatim %}
 		</script>
 	</head>
-	
+
 	<body style="padding-top: {{ navBarOffset }};">
 		<!-- <div class="overlay">
 			<svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
